apps/web/src/styles.scss
@use '@angular/material' as mat;

////////////////////////////////////////////////////////////////////////////////
// Variables & Dark Mode
////////////////////////////////////////////////////////////////////////////////

:root {
  color-scheme: light dark;
  --background: #fafafa;
  --background-alt: #eee;
  --background-muted: #d9ceca;
  --blue-light: #dbe9fe;
  --blue-mid: #bfdbfe;
  --blue-dark: #2463eb;
  --blue-bright: #1d40af;
  --foreground: #000;
  --foreground-muted: #5e5e5e;
  --green-light: #dcfce6;
  --green-mid: #bbf7d0;
  --green-dark: #166434;
  --green-bright: #16a34a;
  --navy: #0f1729;
  --red-light: #ffe3e3;
  --red-mid: #ffc9c9;
  --red-dark: #fa5353;
  --red-bright: #c92a2a;
  --vibrant-start: #9333ea;
  --vibrant-middle: #3b82f6;
  --vibrant-end: #4338ca;
  --white: #fafafa;
}

.dark {
  --background: #0f1729;
  --background-alt: #1d2839;
  --background-muted: #354863;
  --blue-light: #1d2b4a;
  --blue-mid: #1e2f5d;
  --blue-dark: #60a5fa;
  --foreground: #fafafa;
  --foreground-muted: #a1a1a1;
  --green-light: #1c3038;
  --green-mid: #1c3a38;
  --green-dark: #49de80;
  --red-light: #302431;
  --red-mid: #512834;
  --red-dark: #ff8787;
}

////////////////////////////////////////////////////////////////////////////////
// CSS Reset (https://www.joshwcomeau.com/css/custom-css-reset)
////////////////////////////////////////////////////////////////////////////////

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

#root,
#__next {
  isolation: isolate;
}

////////////////////////////////////////////////////////////////////////////////
// Global Styles
////////////////////////////////////////////////////////////////////////////////

html,
body {
  height: 100%;
}

html {
  color-scheme: light dark;

  @include mat.theme(
    (
      color: mat.$violet-palette,
      density: 0,
      typography: Inter,
    )
  );
}

body {
  background: var(--background);
  color: var(--foreground-muted);
  font-family: Inter, sans-serif;
  line-height: 1.5;
}

h1,
h2,
h3,
h4 {
  color: var(--foreground);
  line-height: 1;
}

h1 {
  font-size: 3.75rem;

  span {
    animation: fadeInUp 0.6s cubic-bezier(0.23, 1, 0.32, 1) forwards;
    display: inline-block;
    margin-right: 1rem;
    opacity: 0;
    transform: translateY(20px);

    &:nth-child(1) {
      animation-delay: 0.04s;
    }

    &:nth-child(2) {
      animation-delay: 0.16s;
    }

    &:nth-child(3) {
      animation-delay: 0.28s;
    }
  }

  @keyframes fadeInUp {
    to {
      opacity: 1;
      transform: none;
    }
  }
}

h2 {
  font-size: 1.875rem;

  &.big {
    font-size: 2.25rem;
  }

  &.huge {
    font-size: 3rem;
  }
}

h3 {
  font-size: 1.25rem;
}

h4 {
  font-size: 1.125rem;
}

a {
  color: inherit;
  text-decoration: none;

  &:hover {
    color: var(--foreground);
  }
}

////////////////////////////////////////////////////////////////////////////////
// Utility Classes
////////////////////////////////////////////////////////////////////////////////

.container {
  align-items: center;
  display: flex;
  justify-content: space-between;
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 1.5rem;

  &.column {
    align-items: start;
    flex-direction: column;
  }
}

.text-tiny {
  font-size: 0.75rem;
}

.text-small {
  font-size: 0.875rem;
}

.text-large {
  font-size: 1.25rem;
}

.text-larger {
  font-size: 1.5rem;
}

.text-center {
  text-align: center;
}

.quarter-spaced {
  margin-top: 0.25rem;
}

.single-spaced {
  margin-top: 1rem;
}

.double-spaced {
  margin-top: 1.5rem;
}

.triple-spaced {
  margin-top: 2rem;
}

.sub-page {
  scroll-margin-top: 6.5rem;
}

.sub-page-large {
  scroll-margin-top: 8.5rem;
}

.sub-content {
  padding: 2rem 0;
}

.card {
  border: 1px solid var(--background-muted);
  border-radius: 0.5rem;
  height: 100%;
  overflow: hidden;
  padding: 1.5rem;
  transition: transform 0.2s ease-out;

  &:hover {
    .highlight {
      color: var(--foreground);
    }

    img {
      transform: scale(1.05);
    }

    &.with-photo {
      transform: translateY(-5px);
    }
  }

  &.with-photo {
    padding: 0;

    img {
      border-radius: 0.5rem 0.5rem 0 0;
      object-fit: cover;
      height: 12rem;
      transition: transform 0.2s ease-out;
      width: 100%;
    }
  }
}

.card-content {
  border-radius: 0 0 0.5rem 0.5rem;
  padding: 1.5rem;
}

.icon-heading mat-icon {
  margin-right: 0.75rem;
}

lib-feature-codes .icon-heading mat-icon {
  color: var(--red-bright);
}

lib-feature-travels .icon-heading mat-icon {
  color: var(--blue-bright);
}

lib-feature-games .icon-heading mat-icon {
  color: var(--green-bright);
}

.columns {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  width: 100%;

  &.columns-2 > * {
    flex: 0 0 calc((100% / 2) - 0.75rem);
  }

  &.columns-3 > * {
    flex: 0 0 calc((100% / 3) - 1rem);
  }

  &.columns-4 > * {
    flex: 0 0 calc((100% / 4) - 1.125rem);
  }
}

.pills > * {
  margin: 0.5rem 0.5rem 0 0;
}

